@@ -4,6 +4,7 @@ serd (1.0.0) unstable;
   * Add serd_node_new_relative_uri()
   * Fix construction and comparison of URIs with UTF-8 characters
   * Use char* for strings in public API
+  * Use private implementation for dynamically allocated nodes
   * Remove useless character counting
   * Report I/O errors with message and return appropriate status code
   * Fix potential out of bounds read
